// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots ui/referentiels/ActionProgressBar Mixte 1`] = `
<div
  aria-describedby={null}
  className=""
  data-test="score-eci_2.1"
  onBlur={[Function]}
  onFocus={[Function]}
  onMouseLeave={[Function]}
  onMouseOver={[Function]}
  onTouchEnd={[Function]}
  onTouchStart={[Function]}
  title={null}
>
  <div
    className="flex gap-3 items-center justify-end"
  >
    <div
      className="text-sm font-bold"
    >
      <div
        className="relative whitespace-nowrap"
      >
        <span
          className="text-transparent"
        >
          20 %
        </span>
        <div
          className="absolute top-0 transition-opacity duration-300 ease-in-out  right-0 opacity-100"
        >
          20 %
        </div>
        <div
          className="absolute top-0 transition-opacity duration-300 ease-in-out  right-0 opacity-0"
        >
          20 %
        </div>
      </div>
    </div>
    <div
      className="flex pt-1"
    >
      <div
        className="transition-width duration-500 ease-in-out"
        style={
          Object {
            "backgroundColor": "#565656",
            "borderRadius": 4,
            "minHeight": 10,
            "minWidth": 100,
            "position": "relative",
          }
        }
      >
        <div
          className="transition-width duration-500 ease-in-out"
          style={
            Object {
              "backgroundColor": "#CE0500",
              "borderRadius": 4,
              "left": 0,
              "minHeight": "100%",
              "minWidth": "68%",
              "position": "absolute",
              "top": 0,
            }
          }
        />
        <div
          className="transition-width duration-500 ease-in-out"
          style={
            Object {
              "backgroundColor": "#00A95F",
              "borderRadius": 4,
              "left": 0,
              "minHeight": "100%",
              "minWidth": "48%",
              "position": "absolute",
              "top": 0,
            }
          }
        />
        <div
          className="transition-width duration-500 ease-in-out"
          style={
            Object {
              "backgroundColor": "#0063CB",
              "borderRadius": 4,
              "left": 0,
              "minHeight": "100%",
              "minWidth": "20%",
              "position": "absolute",
              "top": 0,
            }
          }
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots ui/referentiels/ActionProgressBar Rien Renseigne 1`] = `
<div
  aria-describedby={null}
  className=""
  data-test="score-eci_2.1"
  onBlur={[Function]}
  onFocus={[Function]}
  onMouseLeave={[Function]}
  onMouseOver={[Function]}
  onTouchEnd={[Function]}
  onTouchStart={[Function]}
  title={null}
>
  <div
    className="flex gap-3 items-center justify-end"
  >
    <div
      className="text-sm font-bold"
    >
      <div
        className="relative whitespace-nowrap"
      >
        <span
          className="text-transparent"
        >
          0 %
        </span>
        <div
          className="absolute top-0 transition-opacity duration-300 ease-in-out  right-0 opacity-100"
        >
          0 %
        </div>
        <div
          className="absolute top-0 transition-opacity duration-300 ease-in-out  right-0 opacity-0"
        >
          0 %
        </div>
      </div>
    </div>
    <div
      className="flex pt-1"
    >
      <div
        className="transition-width duration-500 ease-in-out"
        style={
          Object {
            "backgroundColor": "#565656",
            "borderRadius": 4,
            "minHeight": 10,
            "minWidth": 100,
            "position": "relative",
          }
        }
      >
        <div
          className="transition-width duration-500 ease-in-out"
          style={
            Object {
              "backgroundColor": "#CE0500",
              "borderRadius": 4,
              "left": 0,
              "minHeight": "100%",
              "minWidth": "0%",
              "position": "absolute",
              "top": 0,
            }
          }
        />
        <div
          className="transition-width duration-500 ease-in-out"
          style={
            Object {
              "backgroundColor": "#00A95F",
              "borderRadius": 4,
              "left": 0,
              "minHeight": "100%",
              "minWidth": "0%",
              "position": "absolute",
              "top": 0,
            }
          }
        />
        <div
          className="transition-width duration-500 ease-in-out"
          style={
            Object {
              "backgroundColor": "#0063CB",
              "borderRadius": 4,
              "left": 0,
              "minHeight": "100%",
              "minWidth": "0%",
              "position": "absolute",
              "top": 0,
            }
          }
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots ui/referentiels/ActionProgressBar Tout Fait 1`] = `
<div
  aria-describedby={null}
  className=""
  data-test="score-eci_2.1"
  onBlur={[Function]}
  onFocus={[Function]}
  onMouseLeave={[Function]}
  onMouseOver={[Function]}
  onTouchEnd={[Function]}
  onTouchStart={[Function]}
  title={null}
>
  <div
    className="flex gap-3 items-center justify-end"
  >
    <div
      className="text-sm font-bold"
    >
      <div
        className="relative whitespace-nowrap"
      >
        <span
          className="text-transparent"
        >
          100 %
        </span>
        <div
          className="absolute top-0 transition-opacity duration-300 ease-in-out  right-0 opacity-100"
        >
          100 %
        </div>
        <div
          className="absolute top-0 transition-opacity duration-300 ease-in-out  right-0 opacity-0"
        >
          100 %
        </div>
      </div>
    </div>
    <div
      className="flex pt-1"
    >
      <div
        className="transition-width duration-500 ease-in-out"
        style={
          Object {
            "backgroundColor": "#565656",
            "borderRadius": 4,
            "minHeight": 10,
            "minWidth": 100,
            "position": "relative",
          }
        }
      >
        <div
          className="transition-width duration-500 ease-in-out"
          style={
            Object {
              "backgroundColor": "#CE0500",
              "borderRadius": 4,
              "left": 0,
              "minHeight": "100%",
              "minWidth": "100%",
              "position": "absolute",
              "top": 0,
            }
          }
        />
        <div
          className="transition-width duration-500 ease-in-out"
          style={
            Object {
              "backgroundColor": "#00A95F",
              "borderRadius": 4,
              "left": 0,
              "minHeight": "100%",
              "minWidth": "100%",
              "position": "absolute",
              "top": 0,
            }
          }
        />
        <div
          className="transition-width duration-500 ease-in-out"
          style={
            Object {
              "backgroundColor": "#0063CB",
              "borderRadius": 4,
              "left": 0,
              "minHeight": "100%",
              "minWidth": "100%",
              "position": "absolute",
              "top": 0,
            }
          }
        />
      </div>
    </div>
  </div>
</div>
`;
